--- a/projeto_transfer_learning_python_DIO.ipynb
+++ b/projeto_transfer_learning_python_DIO.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "gpuType": "T4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,6 +55,26 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Apagar a pasta catsxdogs caso algum novo dado seja incluído na pasta:"
+      ],
+      "metadata": {
+        "id": "CWlegCQxXbN-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#!rm -rf projeto_transfer_learning_python_DIO"
+      ],
+      "metadata": {
+        "id": "WUoJiMaYXT8V"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
       "metadata": {
         "id": "CwN6J1f0vUxW"
       },
@@ -64,33 +85,14 @@
     },
     {
       "metadata": {
-        "id": "u_eqqa_6eZT_",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "602759b4-a74d-4898-a068-4b4c9edba8a4"
+        "id": "u_eqqa_6eZT_"
       },
       "cell_type": "code",
       "source": [
         "!git clone https://github.com/eduardodarocha/projeto_transfer_learning_python_DIO"
       ],
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Cloning into 'projeto_transfer_learning_python_DIO'...\n",
-            "remote: Enumerating objects: 10020, done.\u001b[K\n",
-            "remote: Counting objects: 100% (10/10), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (10/10), done.\u001b[K\n",
-            "remote: Total 10020 (delta 0), reused 10 (delta 0), pack-reused 10010 (from 1)\u001b[K\n",
-            "Receiving objects: 100% (10020/10020), 230.04 MiB | 39.68 MiB/s, done.\n",
-            "Resolving deltas: 100% (3/3), done.\n",
-            "Updating files: 100% (10013/10013), done.\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "metadata": {
@@ -121,7 +123,7 @@
         "from keras.optimizers import Adam\n",
         "from keras.layers import Dropout"
       ],
-      "execution_count": 10,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -144,27 +146,14 @@
     },
     {
       "metadata": {
-        "id": "1B3-bKjBwReh",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "ae7dbad9-d6de-4b89-87bf-5e6e59f03167"
+        "id": "1B3-bKjBwReh"
       },
       "cell_type": "code",
       "source": [
-        "model=MobileNet(weights='imagenet',include_top=False)"
+        "model=MobileNet(weights='imagenet',include_top=False, input_shape=(224, 224, 3))"
       ],
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/tmp/ipython-input-577521531.py:1: UserWarning: `input_shape` is undefined or non-square, or `rows` is not in [128, 160, 192, 224]. Weights for input shape (224, 224) will be loaded as the default.\n",
-            "  model=MobileNet(weights='imagenet',include_top=False)\n"
-          ]
-        }
-      ]
+      "execution_count": 4,
+      "outputs": []
     },
     {
       "metadata": {
@@ -184,7 +173,7 @@
         "x=model.output\n",
         "x=GlobalAveragePooling2D()(x)"
       ],
-      "execution_count": 12,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -206,7 +195,7 @@
         "preds=Dense(1,activation='sigmoid')(x)\n",
         "model=Model(inputs=model.input,outputs=preds)"
       ],
-      "execution_count": 13,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -221,7 +210,7 @@
     {
       "metadata": {
         "id": "2VemyqKtfGdM",
-        "outputId": "38f3c2fd-4dac-4282-fd74-d6c03dc3b4df",
+        "outputId": "08264287-10fd-4f5d-ce59-879c766528c3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -231,13 +220,13 @@
         "for i,layer in enumerate(model.layers):\n",
         "  print(i,layer.name)"
       ],
-      "execution_count": 14,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0 input_layer_1\n",
+            "0 input_layer\n",
             "1 conv1\n",
             "2 conv1_bn\n",
             "3 conv1_relu\n",
@@ -323,9 +312,9 @@
             "83 conv_pw_13\n",
             "84 conv_pw_13_bn\n",
             "85 conv_pw_13_relu\n",
-            "86 global_average_pooling2d_1\n",
-            "87 dense_2\n",
-            "88 dense_3\n"
+            "86 global_average_pooling2d\n",
+            "87 dense\n",
+            "88 dense_1\n"
           ]
         }
       ]
@@ -350,7 +339,7 @@
         "for layer in model.layers[88:]:\n",
         "    layer.trainable=True"
       ],
-      "execution_count": 15,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -379,7 +368,7 @@
       "source": [
         "batch_size = 32"
       ],
-      "execution_count": 16,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -394,7 +383,7 @@
     {
       "metadata": {
         "id": "aOePa8OAgOaf",
-        "outputId": "1d57e93b-e82a-453d-8664-c3c348505ffe",
+        "outputId": "e98863b8-d21a-463f-b9cc-0cf80f4b4a0d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -421,7 +410,7 @@
         "                                            batch_size = batch_size,\n",
         "                                            class_mode = 'binary')"
       ],
-      "execution_count": 18,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -457,9 +446,9 @@
       },
       "cell_type": "code",
       "source": [
-        "model.compile(optimizer=Adam(learning_rate = 0.0001),loss='binary_crossentropy',metrics=['accuracy'])"
+        "model.compile(optimizer=Adam(learning_rate = 0.0001),loss='binary_crossentropy',metrics=['accuracy'])\n"
       ],
-      "execution_count": 19,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -473,11 +462,7 @@
     },
     {
       "metadata": {
-        "id": "3tzvbgsYhkDK",
-        "outputId": "1fb3e559-b90d-4a06-bc90-48d8374d8b39",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "3tzvbgsYhkDK"
       },
       "cell_type": "code",
       "source": [
@@ -487,24 +472,8 @@
         "                   validation_data = test_set,\n",
         "                   validation_steps = int(2000/batch_size))"
       ],
-      "execution_count": 20,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.11/dist-packages/keras/src/trainers/data_adapters/py_dataset_adapter.py:121: UserWarning: Your `PyDataset` class should call `super().__init__(**kwargs)` in its constructor. `**kwargs` can include `workers`, `use_multiprocessing`, `max_queue_size`. Do not pass these arguments to `fit()`, as they will be ignored.\n",
-            "  self._warn_if_super_not_called()\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[1m250/250\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m116s\u001b[0m 434ms/step - accuracy: 0.5033 - loss: 0.8860 - val_accuracy: 0.5050 - val_loss: 0.8299\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "metadata": {
@@ -517,93 +486,18 @@
     },
     {
       "metadata": {
-        "id": "9bKzjWBbnXaM",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 54
-        },
-        "outputId": "ea3a20fb-646f-42e6-819e-d890e4bf687c"
+        "id": "9bKzjWBbnXaM"
       },
       "cell_type": "code",
       "source": [
-        "model.save('projeto_transfer_learning_python_DIO/catsxdogs_mobilenet.h5')\n",
+        "model.save('projeto_transfer_learning_python_DIO/catsxdogs_mobilenet.h5') #This file format is considered legacy\n",
+        "# model.save('projeto_transfer_learning_python_DIO/catsxdogs.keras')\n",
         "from google.colab import files\n",
-        "files.download('catsxdogs_mobilenet.h5')"
+        "# files.download('catsxdogs_mobilenet.h5')\n",
+        "files.download('projeto_transfer_learning_python_DIO/catsxdogs.keras')"
       ],
-      "execution_count": 29,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "\n",
-              "    async function download(id, filename, size) {\n",
-              "      if (!google.colab.kernel.accessAllowed) {\n",
-              "        return;\n",
-              "      }\n",
-              "      const div = document.createElement('div');\n",
-              "      const label = document.createElement('label');\n",
-              "      label.textContent = `Downloading \"${filename}\": `;\n",
-              "      div.appendChild(label);\n",
-              "      const progress = document.createElement('progress');\n",
-              "      progress.max = size;\n",
-              "      div.appendChild(progress);\n",
-              "      document.body.appendChild(div);\n",
-              "\n",
-              "      const buffers = [];\n",
-              "      let downloaded = 0;\n",
-              "\n",
-              "      const channel = await google.colab.kernel.comms.open(id);\n",
-              "      // Send a message to notify the kernel that we're ready.\n",
-              "      channel.send({})\n",
-              "\n",
-              "      for await (const message of channel.messages) {\n",
-              "        // Send a message to notify the kernel that we're ready.\n",
-              "        channel.send({})\n",
-              "        if (message.buffers) {\n",
-              "          for (const buffer of message.buffers) {\n",
-              "            buffers.push(buffer);\n",
-              "            downloaded += buffer.byteLength;\n",
-              "            progress.value = downloaded;\n",
-              "          }\n",
-              "        }\n",
-              "      }\n",
-              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
-              "      const a = document.createElement('a');\n",
-              "      a.href = window.URL.createObjectURL(blob);\n",
-              "      a.download = filename;\n",
-              "      div.appendChild(a);\n",
-              "      a.click();\n",
-              "      div.remove();\n",
-              "    }\n",
-              "  "
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "download(\"download_c5cc0414-4fd9-4712-99b6-f8600889f9fe\", \"catsxdogs_mobilenet.h5\", 13416792)"
-            ]
-          },
-          "metadata": {}
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "metadata": {
@@ -626,7 +520,7 @@
     {
       "metadata": {
         "id": "-zi2res8DTo4",
-        "outputId": "fe6fd024-7b85-4031-b642-19955bf1d39f",
+        "outputId": "23b89c9a-a71c-4d86-9f0e-a127b0d881e9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -635,7 +529,7 @@
       "source": [
         "ls projeto_transfer_learning_python_DIO/single_prediction/"
       ],
-      "execution_count": 36,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -668,13 +562,13 @@
         "test_image = np.expand_dims(test_image, axis = 0)\n",
         "test_image = test_image/255"
       ],
-      "execution_count": 27,
+      "execution_count": 25,
       "outputs": []
     },
     {
       "metadata": {
         "id": "lfF9Lf-XoRgH",
-        "outputId": "6e66a31a-9325-43d0-cead-3e73302ddeca",
+        "outputId": "5096ac5c-f49a-4d7f-fb6c-57b56b8aa29f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -690,13 +584,13 @@
         "\n",
         "print(prediction)"
       ],
-      "execution_count": 28,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 2s/step\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 729ms/step\n",
             "cat\n"
           ]
         }
